Made Some Changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.kafka.consumer.auto-offset-reset=latest
 
 
 # Kafka Topics
-kafka.topic.bank-account-debit=bank-account-debit
-kafka.topic.bank-account-credit=bank-account-credit
+kafka.topic.bank-account-transfer=bank-account-transfer
+#kafka.topic.bank-account-credit=bank-account-credit
